--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>It's a dog's life</h1>
         <div>
             <p>You needs more dogs in your life</p>
+            <select></select
+                <input type="checkbox"> 
         </div>
     </body>
 
