initial commit-made some changes

--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
     Author: Hyeonu Lee
     Practice web page about dog
 -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Cute Dogs</title>   
         <meta charset="UTF-8">
     </head>
-    
-    <body>
+     <body>
         <h1>It's a dog's life</h1>
         <div>
             <p>You needs more dogs in your life</p>
-            <select></select
-                <input type="checkbox"> 
+            <select>
+                <option>Test Option</option>
+            </select>
+                <input type="button" value="Let's Go!"> 
+        </div>
+        <div>
+            <img src="" alt="">
         </div>
     </body>
-
-
-
-
-
-
-
-
-
 </html>
