--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
     Author: Hyeonu Lee
     Practice web page about dog
 -->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Cute Dogs</title>   
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
      <body>
-        <h1>It's a dog's life</h1>
-        <div>
-            <p>You needs more dogs in your life</p>
-            <select>
-                <option>Test Option</option>
+        <div class="bg">
+        <h1 class="headings">It's a dog's life</h1>
+        <div class="panel">
+            <p>You needs more dogs in your life
+            </p>
+            <select name="breeds" id="breed-list"> 
+                <option>Korean Jindo</option>
+                <option>German Shepherd</option>
+                <option>Golden Retriever</option>
             </select>
-                <input type="button" value="Let's Go!"> 
         </div>
-        <div>
-            <img src="" alt="">
+        <div id="image-container" class="panel">
+            <img="image-container" class="panel">
+        </div>  
         </div>
     </body>
 </html>
+<script src="dogs.js"></script>
